# fem_python

./: .gitignore  README.md  pyproject.toml
src/fem_python/: __init__.py  boundary_conditions.py  config.py  integration.py  main.py  make_mesh.py  mesh.py  shape_functions.py  stiffness_matrix.py
src/fem_python/fem/: __init__.py  boundary_conditions.py  integration.py  material_model.py  shape_functions.py  solver.py  stiffness_matrix.py
src/fem_python/mesh/: __init__.py  make_mesh.py  mesh.py
src/fem_python/postprocess/: __init__.py  postprocess.py
