[project]
name = "fem-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gmsh>=4.13.1",
    "meshio>=5.3.5",
    "numpy>=2.1.3",
    "matplotlib>=3.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
